--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/druludwig/forever-pig#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.26.3",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,5 +27,5 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5"
-  } 
+  }
 }
