--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/druludwig/forever-pig#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.26.3",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
+    "express-handlebars": "^5.3.3",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.5"
   }
 }
